k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: classicguess
  namespace: classicguess
  labels:
    app: classicguess
spec:
  selector:
    app: classicguess
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
      appProtocol: http
